--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "crypto-js": "^4.1.1",
     "formik": "^2.2.9",
     "jquery": "^3.6.1",
     "js-sha256": "^0.9.0",
